-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
4e047448f42fe89c44bebe29c58532c48b5ab18a
Embedded devices heat up and eventually crash due to overheating. Take an i.MX6-based device for example. Showing a very simple model (cube) keeps the CPU & GPU busy as we are preparing and rendering frames continously. The board gets warmer and warmer until it eventually crashes.
- is duplicated by
-
QTBUG-52126 Scene3D invalidates itself eventhough the scene graph doesn't change
-
- Closed
-
For Gerrit Dashboard: QTBUG-48329 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
159648,3 | Respect the QRenderSettings::RenderPolicy | 5.7.0 | qt/qt3d | Status: MERGED | +2 | 0 |