Respect the QRenderSettings::RenderPolicy

Works in most cases. In some situations like a
shader using time as an input the user should use
the Always renderpolicy. We can make the backend
support more such cases in the future.

Task-number: QTBUG-48329
Change-Id: Ib34f7cfb517a9c4d2789d7b49a0de62831dd4746
Reviewed-by: Janne Koskinen <janne.p.koskinen@theqtcompany.com>
Reviewed-by: Volker Krause <volker.krause@kdab.com>